--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <main>
         <H1>Penny Flip Game</H1>
         <div>
-            <div>Penny Image Display, Button Controls, and Status Message</div>
+            <div>
+                <img src="assets/images/penny-heads.jpg" alt="Head face of a penny" />
+                <div class="controls">
+                    <button id="flip">Flip the Penny!</button>
+                    <button id="clear">Clean Scoreboard</button>
+                </div>
+                <div class="message-container">
+                <h3>Let's Get Rolling!</h3>
+                </div>
+            </div>
             <hr>
             <div>
                 <h2>Scoreboard</h2>
